--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://hingsli.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: hingsli # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -34,12 +34,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Shuxing Li
+  email: li.shuxing@gkd.edu.cn # change to your email address
   links:
     # The first element serves as the copyright owner's link
+    - https://github.com/hingsli # change to your github homepage
     - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
